--- a/test.html
+++ b/test.html
@@ -29,7 +29,16 @@
 	<a href="test.html" id="btn">Test</a>
 
     </header>
-    
+    <div>
+		<p class = "style">
+			Instructions:<br>
+			1. Go to the website of your source. <br>
+			2. Click on the search bar.<br>
+			3. Ctrl+A and Ctrl+C.<br>
+			4. Ctrl+V into the textbox below.<br>
+			5. Check!
+		</p>
+	</div>
     <form action="result.html" method = "GET">
         <p class="style">
 			<label for="NewsInput">Test your Source!</label><br>
