--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	
 
 	<h2 class="style" id="welcome">
-  Welcome to InfoCheck! InfoCheck is an innovative, novel technology capable of diagnsosing the validity and credibility of a user's input. Misinformation has become rampant over the past couple of months in regard to the COVID-19 pandemic, and InfoCheck is well-prepared to address this temporal, dire concern!
+  Welcome to InfoCheck! InfoCheck is an innovative, novel technology capable of diagnosing the validity and credibility of a user's input. Misinformation has become rampant over the past couple of months in regard to the COVID-19 pandemic, and InfoCheck is well-prepared to address this temporal, dire concern!
 
 	</h2>
 	<!-- the above is a brief introduction to my website so a viewer knows what they're looking at -->
